KinD/study/traefikind/manifest/whoami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
