KinD/study/traefikind/manifest/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.0a0f122c.nip.io`)
    kind: Rule
    middlewares:
    services:
    - name: traefik
      port: 8080
      scheme: admin

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: ingressroutetls
#   namespace: default
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - match: Host(`your.example.com`) && PathPrefix(`/tls`)
#     kind: Rule
#     services:
#     - name: whoami
#       port: 80
#   tls:
#     certResolver: myresolver
